--- a/app/views/clients/home/index.html.erb
+++ b/app/views/clients/home/index.html.erb
@@ -1,1 +1,2 @@
-<%= link_to "#{current_user.name} #{current_user.surname}", user_path(current_user.id) %>
+<%= link_to "#{current_user.name} #{current_user.surname}", '' %>
+<%= link_to "Выйти", destroy_user_session_path, data: { "turbo-method": :delete } %>
