--- a/app/views/client/orders/_form.html.erb
+++ b/app/views/client/orders/_form.html.erb
@@ -1,7 +1,12 @@
-<%= form_with url: client_orders_path, method: :post do |form| %>
-  <%= form.select :subject, Order::SUBJECTS.map { |key, value|  [value, key]} %>
-  <%= form.select :type, Order::TYPES.map { |key, value|  [value, key]} %>
+<%= form_with model: [:client, @order] do |form| %>
+  <%= form.collection_select :subject, OrderSubject.all, :id, :name, prompt: 'Предмет' %>
+  <%= form.collection_select :type, OrderType.all, :id, :name, prompt: 'Тип работы' %>
   <%= form.date_field :deadline %>
   <%= form.text_field :title, placeholder: "Название работы(Например: ЛР1)" %>
-  <%= form.select :title, placeholder: "Название работы(Например: ЛР1)" %>
+  <%= form.collection_select :group, UserGroup.all, :id, :uid, prompt: 'Группа' %>
+  <%= form.collection_select :desired_executor, User.all.where(role: :executor), :id, :name, prompt: 'Желаемый исполнитель' %>
+  <%= form.text_field :volume_from, placeholder: 'От' %>
+  <%= form.text_field :volume_to, placeholder: 'До' %>
+  <%= form.textarea :comment, placeholder: 'Ваш комментарий' %>
+  <%= form.submit "Создать заказ" %>
 <% end %>
