--- a/app/views/client/orders/_form.html.erb
+++ b/app/views/client/orders/_form.html.erb
@@ -1,10 +1,20 @@
 <%= form_with model: [:client, @order] do |form| %>
+  <% if @order.errors.any? %>
+    <div id="error_explanation">
+      <ul>
+        <% @order.errors.each do |error| %>
+          <li><%= error.full_message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
   <%= form.collection_select :subject, OrderSubject.all, :id, :name, prompt: 'Предмет' %>
   <%= form.collection_select :type, OrderType.all, :id, :name, prompt: 'Тип работы' %>
   <%= form.date_field :deadline %>
   <%= form.text_field :title, placeholder: "Название работы(Например: ЛР1)" %>
-  <%= form.collection_select :group, UserGroup.all, :id, :uid, prompt: 'Группа' %>
-  <%= form.collection_select :desired_executor, User.all.where(role: :executor), :id, :name, prompt: 'Желаемый исполнитель' %>
+  <%= form.collection_select :group, UserGroup.all, :id, :uid, prompt: 'Группа', selected: current_user.group %>
+  <%= form.collection_select :desired_executor, User.all.where(role: :executor), :id, :name, selected: current_user.desired_executor, prompt: 'Желаемый исполнитель' %>
   <%= form.text_field :volume_from, placeholder: 'От' %>
   <%= form.text_field :volume_to, placeholder: 'До' %>
   <%= form.textarea :comment, placeholder: 'Ваш комментарий' %>
