--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
           <%= current_user.name %>
         <% end %>
       <% else %>
-        <%= link_to "Заказать", "" %>
+        <%= link_to "Заказать", new_client_order_path, data: { turbo_frame: 'modal' } %>
         <%= link_to "Вход", new_user_session_path %>
       <% end %>
     </header>
