--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,4 +1,4 @@
-<% if resource.errors.any? %>
+<% if resource&.errors&.any? %>
   <div id="error_explanation" data-turbo-cache="false">
     <% if local_assigns[:category] %>
       <ul>
